text html mensagem vazia

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <hr />
 
         <ul id="lista-de-compras">
+          <p class="mensagem-lista-vazia">Não há nenhum item na lista no momento.</p>
         </ul>
       </div>
     </main>
