--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
         </ul>
       </div>
     </main>
-    <script defer src="index.js" type="module"></script>
+    <script src="index.js" type="module"></script>
   </body>
 </html>
